--- a/resources/assets/styles/media-queries/_all.scss
+++ b/resources/assets/styles/media-queries/_all.scss
@@ -43,6 +43,12 @@
 
   .fya-background img { display: none; }
 
+
+
+  section.discover-amazing-trips .amazing-trip {
+    width: 20%;
+  }
+
 }
 
 @media only screen and (min-width : 992px) {
